<resources>
    <string name="WEATHER_APP_API_KEY">5b08b54ce198509d241991110864cab4</string>
    <string name="app_name">WeatherApp</string>
    <string name="about_dev">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="humidity">99%</string>
    <string name="day_of_forecast">Day</string>
    <string name="last_update">Update hour</string>
    <string name="forecast_title">5-day forecast</string>
    <string name="forecast_hour">Hour</string>
    <string name="humidity_text">Humidity:</string>
    <string name="temp_min_text">Min</string>
    <string name="temp_max_text">Max</string>
    <string name="current_text">Current </string>
    <string name="city_hour_update_text">Last update:</string>
    <string name="city_current_date">click map to update data</string>
    <string name="weather_text">Weather Description</string>
    <string name="about_copyright">Created by Tomasz Klecha: \nQ1 2020</string>
    <string name="about_email">Contact email: \ntom.klecha.dev@gmail.com</string>
    <string name="refresh_weather">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="update_succesful">Successful update !</string>
    <string name="update_server_delay">Data didn\'t changed yet on server ! Try later</string>
    <string name="update_in_time">Try to update in : %s min</string>
    <string name="search_by_city">Type city</string>
    <string name="share_city">Share </string>
    <string name="search_dialog_onCancel">Request cancelled</string>
    <string name="menu_share">Share</string>
    <string name="share_type_data">Which data would you like to share ?</string>
    <string name="share_current_temp">Current temperature</string>

</resources>
