<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_app_bar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_refresh_weather"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/refresh_weather"
        app:showAsAction="ifRoom"
        android:visible="false"
        />

    <item
        android:id="@+id/menu_about_dev"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/about_dev"
        app:showAsAction="ifRoom" />
</menu>